# xilowidgets

./: README.md  pyproject.toml
examples/xilowidgets_example/: pyproject.toml
examples/xilowidgets_example/src/: main.py
src/flutter/xilowidgets/: .gitignore  pubspec.yaml
src/flutter/xilowidgets/lib/: xilowidgets.dart
src/flutter/xilowidgets/lib/src/: animated_text_kit.dart  create_control.dart  editor.dart  media_query.dart  revealer.dart  switcher.dart  xdialog.dart  xdropdown.dart  zoomer.dart
src/xilowidgets/: __init__.py  animated_text_kit.py  drawboard.py  editor.py  mediaquery.py  switcher.py
src/xilowidgets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
